--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,6 @@ h1 {
     background-color: rgb(90, 202, 90);
     text-align: center;
     font-size: 80px;
-    text-decoration: none;
     }
 
 .wiki{
@@ -67,4 +66,17 @@ div {
 
   a {
     color: rgb(109, 78, 145);
+  }
+
+  #politics {
+    border: 5px solid;
+    width: 200px; 
+    height: 200px; 
+    object-fit: cover;
+    object-position: 50% 50%
+  }
+
+  #pcap {
+    font-size: smaller;
+    font-family: papyrus;
   }
