--- a/mystyle.css
+++ b/mystyle.css
@@ -86,4 +86,9 @@ div {
     height: 500px; 
     object-fit: cover;
     object-position: 100% 0%; 
-}
+  }
+
+    .head{
+        text-align: left;
+    font-size: 80px;
+    }
