--- a/mystyle.css
+++ b/mystyle.css
@@ -92,3 +92,16 @@ div {
         text-align: left;
     font-size: 80px;
     }
+
+    .big{
+        font-weight: bolder;
+        font-size: xx-large;
+        color: blue;
+    }
+
+    .birthday{
+        font-weight: bolder;
+        font-size: 160px;
+        color: rgb(143, 41, 41);
+        font-family: cursive;
+    }
